another spacing issue fixed

--- a/theme/_/styles/style.scss
+++ b/theme/_/styles/style.scss
@@ -431,6 +431,7 @@ body.single-works {
 img.xyz {
   display: block;
   margin: 0 auto;
+  margin-bottom: 2em;
 }
 
 .first-image {
